# SparseLSH

./: .gitignore  CHANGES.md  CHANGES.rst  LICENSE  MANIFEST  MANIFEST.in  Pipfile  README.md  README.rst  TODO.md  optional-requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml  python-release.yml  python-test-lint.yml
examples/: cluster.py  lsh_cluster.py
sparselsh/: __init__.py  cli.py  lsh.py  storage.py
tests/: base_test.py  extra_data_tests.py  regression_tests.py  test_benchmark.py  test_bruteforce_e2e.py  test_input_matrix.py  test_no_extra_data.py
