[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[sparselsh]
name = "sparselsh"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
dynamic = [
    "version",
    "keywords",
    "description",
    "classifiers",
    "author",
    "author_email",
    "url",
    "download_url",
    "dependencies",
    "optional-dependencies",
    "scripts"
]
