[metadata]
name = sparselsh
version = attr: sparselsh.__version__
author = Brandon Roberts
author_email = brandon@bxroberts.org
description = A locality sensitive hashing library with an emphasis on large, sparse datasets.
description_file = README.md
keywords = clustering, sparse, lsh
url = https://github.com/brandonrobertz/sparselsh
download_url = https://github.com/brandonrobertz/SparseLSH
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries

[options]
packages = find:
install_requires =
    numpy>=1.18.6,<2.0
    scipy>=1.0.0,<2.0
    scikit-learn>=0.24.0,<2.0

[options.extras_require]
test = pytest
lint = flake8
redis = redis>=2.10.1,<3.0
leveldb = leveldb>=0.201,<1.0

[options.entry_points]
console_scripts =
    sparselsh = sparselsh.cli:cli
